# promock

./: .gitignore  Cargo.toml  README.md  TODO.md  bunfig.toml  jest.config.cjs  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.config/: condu.ts  jest.config.cjs
.config/release-please/: config.json  manifest.json
.github/actions/moon-ci-setup/: action.yml
.github/workflows/: moon-ci.yml  release-please.yml
docs/: classesTest.ts  example.ts
src/: classesTest.ts  example.ts  lib.rs  lib.test.ts  mockify-bun.ts  mockify-bun2.ts  mockify.ts
src/bun/: goDep-node.ts  goRequire.ts  override-node.ts  override.ts  resolveTest.ts  resolveTest2.ts
src/prompts/: writingTransform.md
src/testContent/: content.test.ts  content.ts  defaultFn.ts
