[package]
name = "swc-mockify"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# was true
lto = false

[dependencies]
lazy_static = "1.4.0"
pathdiff = "0.2.1"
regex = "1.9.5"
serde = "1"
serde_json = "1.0.106"
serde_regex = "1.1.0"
swc_core = { version = "0.83.*", features = ["ecma_plugin_transform"] }
swc_ecma_utils = "0.123.0"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
